--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           </tbody>
         </table>
       </div>
+      <img src="./assets/dog-show.jpg" alt="">
     </div>
   </body>
 </html>
